@@ -153,30 +153,6 @@ Bool error_occured = False;
 static RETSIGTYPE TerminateHandler(int);
 void ExitPager(void);
 
-static void CopyStringWithQuotes(char **dest, const char *src)
-{
-	while (src && src[0] == ' ')
-	{
-		src++;
-	}
-	if (src && src[0] == '"')
-	{
-		int len;
-
-		src++;
-		CopyString(dest, src);
-		len = strlen(*dest);
-		if (len > 0 && (*dest)[len - 1] == '"')
-		{
-			(*dest)[len - 1] = '\0';
-		}
-	}
-	else
-	{
-		CopyString(dest, src);
-	}
-}
-
 /***********************************************************************
  *
  *  Procedure:
