@@ -244,30 +244,6 @@ static int ErrorHandler(Display*, XErrorEvent*);
 static Bool change_colorset(int cset, Bool force);
 int IsItemIndexIconSuppressed(List *list, int i);
 
-void CopyStringWithQuotes(char **dest, const char *src)
-{
-	while (src && src[0] == ' ')
-	{
-		src++;
-	}
-	if (src && src[0] == '"')
-	{
-		int len;
-
-		src++;
-		CopyString(dest, src);
-		len = strlen(*dest);
-		if (len > 0 && (*dest)[len - 1] == '"')
-		{
-			(*dest)[len - 1] = '\0';
-		}
-	}
-	else
-	{
-		CopyString(dest, src);
-	}
-}
-
 /******************************************************************************
   Main - Setup the XConnection,request the window list and loop forever
     Based on main() from FvwmIdent:
