@@ -4,6 +4,11 @@
 	* FvwmTaskBar/FvwmTaskBar.c (ParseConfigLine):
 	* FvwmTaskBar/Goodies.c (GoodiesParseConfig):
 	* FvwmButtons/parse.c (ParseConfigLine):
+	* FvwmIconBox/FvwmIconBox.c (ParseOptions):
+	* FvwmIconMan/readconfig.c (read_in_resources):
+	* FvwmIdent/FvwmIdent.c (main):
+	* FvwmForm/FvwmForm.c (ct_*Font):
+	* FvwmWinList/FvwmWinList.c (ParseConfigLine):
 	fixed double quotes in *Font configuration options;
 	the current solution is adding CopyStringWithQuotes()
 
